fix category checkbox layout on firefox
Fixed by making position of input relative, not sure why this works (sorry).

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -86,3 +86,7 @@ hr.hr-small {
 .category-filter-checkboxes .checkbox {
   display: inline;
 }
+
+.category-filter-checkboxes .checkbox input {
+  position: relative;
+}
